--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    <meta name="applicable-device" content="pc,mobile" />
+    <meta name="keywords" content="熊仔音乐，音乐，播放器，熊仔，下载，播放，DJ，免费，明星，精选，歌单，识别音乐，收藏，分享音乐，音乐互动，高音质，320K，音乐社交，官网，xxoutman.cn" />
+    <meta name="description" content="熊仔音乐是一款专注于发现与分享的音乐产品，依托专业音乐人、DJ、好友推荐及社交功能，为用户打造全新的音乐生活。" />
+    <meta property="og:title" content="熊仔音乐" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://xp-bird.gitee.io/food-image/logo3.png" />
+    <meta property="og:url" content="http://xxoutman.cn/" />
+    <meta property="og:site_name" content="熊仔音乐" />
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0" /> -->
