用户歌单评论完成

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,13 @@
         border-radius: 10px;
       }
     </style>
+    <!-- 背景遮罩主要是灰色 -->
+    <!-- <style>
+      html {
+        filter: gray !important;
+        filter: grayscale(100%);
+      }
+    </style> -->
   </head>
   <body class="test-5">
     <noscript>
