--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,12 @@
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>熊仔音乐_歌曲大全_免费下载_VIP 音乐、MV视频资源</title>
+
     <!-- <script type="text/javascript" src="<%= BASE_URL %>live2dw/lib/L2Dwidget.min.js"></script> -->
     <script type="text/javascript" src="/live2dw/lib/L2Dwidget.min.js"></script>
     <script src="/js/canvas-particle.js"></script>
+    <!-- 获取地理位置百度 -->
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=5m0QlcWQKtF7A7C7TuEGRXldzRA1oBfz"></script>
     <!-- 背景滚动条 -->
     <style>
       .test-5::-webkit-scrollbar {
