--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
       @font-face {
         font-family: xp;
         /* src: url("@/assets/fonts/two.ttf"); */
-        src: url("http://cdn.xxoutman.cn/two.ttf");
+        src: url("https://xp-cdn-oss.oss-cn-wuhan-lr.aliyuncs.com/common/consolas.ttf");
       }
     </style>
   </head>
